[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prefabs/Weapons/Projectiles/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Weapons/Guns/SimpleGun.gd" type="Script" id=2]

[node name="SimpleGun" type="Node2D" groups=["Guns"]]
position = Vector2( 0, -13 )
rotation = 1.5708
script = ExtResource( 2 )
projectile = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 18, 0 )

[node name="Reload_timer" type="Timer" parent="."]
one_shot = true

[node name="Heat_timer" type="Timer" parent="."]
one_shot = true

[node name="Firerate_timer" type="Timer" parent="."]
one_shot = true
